--- a/market-report.html
+++ b/market-report.html
@@ -7,6 +7,18 @@
   <body>
     <h1> Exceptional </h1>
     <h2> Realty Group </h2>
+
+    <p></p>
+
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="real-estate-listings.html">Real Estate Listings</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+
+    <p></p>
+
     <h3>Market Report</h3>
     <table>
       <tr>
