--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -10,6 +10,17 @@
     <h1> Exceptional </h1>
     <h2> Realty Group </h2>
 
+    <p></p>
+
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="real-estate-listings.html">Real Estate Listings</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+
+    <p></p>
+
     <h3>Property Archives</h3>
     <h4>2014</h4>
     <ul>
