--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head lang ="en">
     <meta charset="utf-8">
-    <title></title>
+      <title>Exceptional Realty Group - Luxury Homes - Contact</title>
   </head>
   <body>
     <h1> Exceptional </h1>
@@ -19,5 +19,6 @@
 
     <p></p>
 
+    <h3> Contact </h3>
   </body>
 </html>
