--- a/new-properties.html
+++ b/new-properties.html
@@ -2,7 +2,7 @@
 <html>
   <head lang ="en">
     <meta charset="utf-8">
-    <title></title>
+      <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
   </head>
   <body>
     <h1> Exceptional </h1>
@@ -18,6 +18,7 @@
     <a href="http://hud.gov" target='_blank'>H.U.D.</a>
 
     <p></p>
+    <h3> New Properties </h3>
 
   </body>
 </html>
