--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
      <p>
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
-     Hello Moon
+
+     <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        <p> Your browser does not support HTML5 video.  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a><p>
+    </video>
   </body>
 
 </html>
